# adam_impacts_study

./: .gitignore  .pre-commit-config.yaml  README.md  build_fo.sh  pyproject.toml  sample_impactor.parquet
.github/workflows/: build-lint-test-coverage.yml
data/inputs/11-07-2024/: sampled_ImpactorsStudy_2025-05-05T00:00:00_2035-05-05T00:00:00_initial_objects.parquet  sampled_ImpactorsStudy_2035-05-05T00:00:00_2045-05-05T00:00:00_initial_objects.parquet  sampled_ImpactorsStudy_2045-05-05T00:00:00_2055-05-05T00:00:00_initial_objects.parquet  sampled_ImpactorsStudy_2055-05-05T00:00:00_2065-05-05T00:00:00_initial_objects.parquet  sampled_ImpactorsStudy_2065-05-05T00:00:00_2075-05-05T00:00:00_initial_objects.parquet  sampled_ImpactorsStudy_2075-05-05T00:00:00_2085-05-05T00:00:00_initial_objects.parquet  sampled_ImpactorsStudy_2085-05-05T00:00:00_2095-05-05T00:00:00_initial_objects.parquet  sampled_ImpactorsStudy_2095-05-05T00:00:00_2105-05-05T00:00:00_initial_objects.parquet  sampled_ImpactorsStudy_2105-05-05T00:00:00_2115-05-05T00:00:00_initial_objects.parquet  sampled_ImpactorsStudy_2115-05-05T00:00:00_2125-05-05T00:00:00_initial_objects.parquet
data/inputs/12-02-2024/: sampled_ImpactorsStudy_2025-05-05T00:00:00_2035-05-05T00:00:00_impacting_objects.parquet  sampled_ImpactorsStudy_2035-05-05T00:00:00_2045-05-05T00:00:00_impacting_objects.parquet  sampled_ImpactorsStudy_2045-05-05T00:00:00_2055-05-05T00:00:00_impacting_objects.parquet  sampled_ImpactorsStudy_2055-05-05T00:00:00_2065-05-05T00:00:00_impacting_objects.parquet  sampled_ImpactorsStudy_2065-05-05T00:00:00_2075-05-05T00:00:00_impacting_objects.parquet  sampled_ImpactorsStudy_2075-05-05T00:00:00_2085-05-05T00:00:00_impacting_objects.parquet  sampled_ImpactorsStudy_2085-05-05T00:00:00_2095-05-05T00:00:00_impacting_objects.parquet  sampled_ImpactorsStudy_2095-05-05T00:00:00_2105-05-05T00:00:00_impacting_objects.parquet  sampled_ImpactorsStudy_2105-05-05T00:00:00_2115-05-05T00:00:00_impacting_objects.parquet  sampled_ImpactorsStudy_2115-05-05T00:00:00_2125-05-05T00:00:00_impacting_objects.parquet
data/inputs/12-16-2024--round-trip/: ImpactorsStudy_2125-05-05T00_00_00_2135-05-06T00_00_00_impacting_objects.parquet  ImpactorsStudy_2125-05-05T00_00_00_2135-05-06T00_00_00_initial_objects.parquet  ImpactorsStudy_2125-05-05T00_00_00_2135-05-06T00_00_00_non_impacting_objects.parquet  README.md
demo/: demo.py  demo_20yr.py  impact_run_config.json  impact_runner.py
demo/data/: 10_impactors.csv  10_impactors.parquet  combined_orbits.parquet  impactor_orbits_10_per_decade_5_bins.parquet  population_config.json  sorcha_config_demo.ini  summarized_results.parquet
notebooks/: analysis.ipynb  elements_plotting.ipynb  full_analysis.ipynb  make_population.ipynb
scripts/: refineimpactors.py  sort_non_impacts.py
src/adam_impact_study/: analysis.py  build_fo.sh  conversions.py  environ.dat.tpl  fo_od.py  impacts_study.py  install.py  physical_params.py  population.py  sorcha_utils.py  types.py  utils.py
src/adam_impact_study/analysis/: __init__.py  collect.py  main.py  plots.py  population.py  utils.py
src/adam_impact_study/analysis/tests/: test_analysis.py
src/adam_impact_study/cli/: __init__.py  compile_orbits.py  impact.py  preprocessing.py  refine.py  sort.py
src/adam_impact_study/tests/: test_analysis.py  test_conversions.py  test_fo_od.py  test_impact_study.py  test_physical_params.py  test_population.py  test_sorcha_utils.py
src/background_analysis/: round_trip_propagation.py
tests/: test_analysis.py  test_conversions.py  test_converstions.py  test_dummy.py  test_fo_od.py  test_impact_study.py  test_physical_params.py  test_round_trip.py  test_sorcha_utils.py
