[project]
name = "adam_impact_study"
version = "0.1.0"
description = ""
authors = [
    {name = "Kathleen Kiker", email = "kathleen@b612foundation.org"},
    {name = "Alec Koumjian", email = "alec@b612foundation.org"},
    {name = "Nate Tellis", email = "nate@b612foundation.org"},
    {name = "Joachim Moeyens", email = "moeyensj@uw.edu"},
]
dependencies = [
    "matplotlib>=3.10.0",
    "adam_assist>=0.2.0",
    "ray[default]==2.39.0",
    "sorcha @ git+https://github.com/B612-Asteroid-Institute/sorcha.git@cd5be9a06c6d24e1277cf2345bda9984f7097ede",
    "adam-core>=0.3.5",
    "quivr @ git+https://github.com/B612-Asteroid-Institute/quivr@2d8ae0b40bdfb75bcceff0c73d41a52d4bffb5dc",
]
requires-python = "<3.13,>=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
dev = [
    "black",
    "ipython",
    "isort",
    "mypy",
    "pdm",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-mock",
    "pytest",
    "ruff",
    "adam-assist @ git+https://github.com/B612-Asteroid-Institute/adam-assist.git@8e5204654fc74f9b91a0c461f4940c1787ed06de",
    "seaborn>=0.13.2",
]

[tool.pdm.scripts]
check = { composite = ["lint", "typecheck", "test"] }
format = { composite = ["black ./src/adam_impact_study", "isort ./src/adam_impact_study"] }
lint = { composite = [
  "ruff check ./src/adam_impact_study",
  "black --check ./src/adam_impact_study",
  "isort --check-only ./src/adam_impact_study",
] }
fix = "ruff ./src/adam_impact_study --fix"
typecheck = "mypy --strict ./src/adam_impact_study"

test = "pytest --benchmark-disable {args}"
doctest = "pytest --doctest-plus --doctest-only"
benchmark = "pytest --benchmark-only"
coverage = "pytest --cov=adam_impact_study --cov-report=xml"

[tool.pdm]
distribution = true
# We use our fork but sorcha wants to install vanilla assist
resolution.excludes = ["assist"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 110
target-version = "py311"
lint.ignore = []
exclude = ["build"]

[project.scripts]
adam-impact = "adam_impact_study.cli.impact:main"
adam-impact-convert = "adam_impact_study.cli.preprocessing:main"
adam-impact-sort = "adam_impact_study.cli.sort:main"
adam-impact-refine = "adam_impact_study.cli.refine:main"
