[project]
name = "adam_impact_study"
version = "0.1.0"
description = ""
authors = [
    {name = "Kathleen Kiker", email = "kathleen@b612foundation.org"},
    {name = "Alec Koumjian", email = "alec@b612foundation.org"},
    {name = "Nate Tellis", email = "nate@b612foundation.org"},
    {name = "Joachim Moeyens", email = "moeyensj@uw.edu"},
]
dependencies = [
    "matplotlib>=3.10.0",
    "adam-assist @ git+https://github.com/B612-Asteroid-Institute/adam-assist.git@51fd94b8df88f569d521f860d74ff7eebb9c12bd",
    "ray[default]==2.39.0",
    "sorcha @ git+https://github.com/B612-Asteroid-Institute/sorcha@23a3392f0145f7dbbdbb7b17687b69902716bde8",
    "quivr @ git+https://github.com/B612-Asteroid-Institute/quivr@2d8ae0b40bdfb75bcceff0c73d41a52d4bffb5dc",
    "ipdb>=0.13.13",
    "adam-fo @ git+https://github.com/B612-Asteroid-Institute/adam_fo@f3c851fb46ba03f5e7d056e68e685a2e45f178f9",
]
requires-python = "<3.13,>=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
dev = [
    "black",
    "ipython",
    "isort",
    "mypy",
    "pdm",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-mock",
    "pytest",
    "ruff",
    "seaborn>=0.13.2",
    "memray>=1.15.0",
]

[tool.pdm.scripts]
check = { composite = ["lint", "typecheck", "test"] }
format = { composite = ["black ./src/adam_impact_study", "isort ./src/adam_impact_study"] }
lint = { composite = [
  "ruff check ./src/adam_impact_study",
  "black --check ./src/adam_impact_study",
  "isort --check-only ./src/adam_impact_study",
] }
fix = "ruff ./src/adam_impact_study --fix"
typecheck = "mypy --strict ./src/adam_impact_study"

test = "pytest --benchmark-disable {args} -rs"
doctest = "pytest --doctest-plus --doctest-only"
benchmark = "pytest --benchmark-only"
coverage = "pytest --cov=adam_impact_study --cov-report=xml"

[tool.pdm]
distribution = true
# We use our fork but sorcha wants to install vanilla assist
resolution.excludes = ["assist"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 110
target-version = "py311"
lint.ignore = []
exclude = ["build"]

[project.scripts]
adam-impact = "adam_impact_study.cli.impact:main"
adam-impact-convert = "adam_impact_study.cli.preprocessing:main"
adam-impact-sort = "adam_impact_study.cli.sort:main"
adam-impact-refine = "adam_impact_study.cli.refine:main"
